// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BacklogItemCoverage Display a skeleton when the tests are being loaded 1`] = `
<div
  class="test-plan-backlog-item-coverage"
>
  <span
    class="tlp-skeleton-text test-plan-backlog-item-coverage-text-skeleton"
  />
   
  <span
    class="tlp-skeleton-text test-plan-backlog-item-coverage-icon-skeleton"
  />
</div>
`;

exports[`BacklogItemCoverage Does not display anything if there is only tests not planned in any campaigns 1`] = `
<div
  class="test-plan-backlog-item-coverage"
>
  <!---->
</div>
`;

exports[`BacklogItemCoverage Does not display anything if there is no tests 1`] = `
<div
  class="test-plan-backlog-item-coverage"
>
  <!---->
</div>
`;
